--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ footer
         font-size: 2em;
         width: 80%;
     }
-    .footer
+    .footer p
     {
         font-size: 2em;
     }
@@ -291,7 +291,7 @@ footer
     {
         font-size: 2.5em;
     }
-    .footer
+    .footer p
     {
         font-size: 2.5em;
     }
@@ -304,7 +304,7 @@ footer
     {
         font-size: 3em;
     }
-    .footer
+    .footer p
     {
         font-size: 3em;
     }
@@ -317,7 +317,7 @@ footer
     {
         font-size: 4em;
     }
-    .footer
+    .footer p
     {
         font-size: 4em;
     }
@@ -330,7 +330,7 @@ footer
     {
         font-size: 6em;
     }
-    .footer
+    .footer p
     {
         font-size: 6em;
     }
@@ -343,7 +343,7 @@ footer
     {
         font-size: 8em;
     }
-    .footer
+    .footer p
     {
         font-size: 8em;
     }
